--- a/css/custom.css
+++ b/css/custom.css
@@ -253,7 +253,7 @@ h4 {
 }
 
 .content-first {
-	background-color:#34495E;
+	background-color:#222222;
 	padding:80px 0;
 	color:#FFFFFF;
 	border-top:8px solid rgba(0,0,0,0.1);
@@ -261,7 +261,7 @@ h4 {
 }
 
 .content-second {
-	background-color:#1ABC9C;
+	background-color:#111111;
 	padding:80px 0;
 	color:#FFFFFF;
 	border-top:8px solid rgba(0,0,0,0.1);
@@ -376,7 +376,7 @@ h4 {
 
 .navbar-default {
 	margin:0;
-	background-color:#2C3E50;
+	background-color:#000000;
 	border:none;
 	border-radius:0;
 	height:78px;
@@ -427,7 +427,7 @@ h4 {
 
 .navbar-collapse {
 	margin:0;
-	background-color:#2C3E50;
+	background-color:#000000;
 	border:none;
 	border-radius:0;
 	padding-top:3px;
@@ -448,7 +448,7 @@ header {
 
 .jumbotron {
 	margin:0;
-  	background-color:#2F4254;
+  	background-color:#000000;
 }
 
 .jumbotron img {
@@ -636,7 +636,7 @@ header {
     position: absolute;
     right: 5px;
     top: -7px;
-	content:"\f024";
+	content:"\f19d";
 	text-align:center;
 	font-size:14px;
 	border-radius:50%;
